i fixed gap between my containers

--- a/style.css
+++ b/style.css
@@ -42,86 +42,6 @@ h4 {
 	margin-top: 24px;
 }
 
-.todo-task1 {
-	margin-left: 29px;
-	margin-right: 29px;
-	font-size: 15px;
-	font-style: bold;
-	line-height: 100%;
-	font-weight: 700;
-	background-color: var(--background);
-	border-radius: 8px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	padding-left: 19px;
-	font-size: 15px;
-	font-style: bold;
-	line-height: 100%;
-	font-weight: 700;
-	margin-bottom: 20px;
-	box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
-}
-
-.todo-task2 {
-	margin-left: 29px;
-	margin-right: 29px;
-	font-size: 15px;
-	font-style: bold;
-	line-height: 100%;
-	font-weight: 700;
-	background-color: var(--background);
-	border-radius: 8px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	padding-left: 19px;
-	font-size: 15px;
-	font-style: bold;
-	line-height: 100%;
-	font-weight: 700;
-	margin-bottom: 20px;
-	box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
-}
-
-.todo-task3 {
-	margin-left: 29px;
-	margin-right: 29px;
-	font-size: 15px;
-	font-style: bold;
-	line-height: 100%;
-	font-weight: 700;
-	background-color: var(--background);
-	border-radius: 8px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	padding-left: 19px;
-	font-size: 15px;
-	font-style: bold;
-	line-height: 100%;
-	font-weight: 700;
-	margin-bottom: 20px;
-	box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
-}
-
-.todo-task4 {
-	margin-left: 29px;
-	margin-right: 29px;
-	font-size: 15px;
-	font-style: bold;
-	line-height: 100%;
-	font-weight: 700;
-	background-color: var(--background);
-	border-radius: 8px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	padding-left: 19px;
-	font-size: 15px;
-	font-style: bold;
-	line-height: 100%;
-	font-weight: 700;
-	margin-bottom: 20px;
-	box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
-}
-
 /* DONE Column  */
 
 #done-round {
@@ -143,11 +63,6 @@ h4 {
 }
 
 /* Tasks container for TODO */
-
-#todo-col {
-	display: flex;
-	margin-left: 29px;
-}
 
 #todo-round {
 	margin-top: 24px;
@@ -183,6 +98,93 @@ h4 {
 	.side-bar,
 	h2 {
 		display: none;
+	}
+
+	/* Todo column */
+
+	.todo-task1 {
+		margin-left: 29px;
+		margin-right: 29px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		background-color: var(--background);
+		border-radius: 8px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		padding-left: 19px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		margin-bottom: 20px;
+		box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
+	}
+
+	.todo-task2 {
+		margin-left: 29px;
+		margin-right: 29px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		background-color: var(--background);
+		border-radius: 8px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		padding-left: 19px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		margin-bottom: 20px;
+		box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
+	}
+
+	.todo-task3 {
+		margin-left: 29px;
+		margin-right: 29px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		background-color: var(--background);
+		border-radius: 8px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		padding-left: 19px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		margin-bottom: 20px;
+		box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
+	}
+
+	.todo-task4 {
+		margin-left: 29px;
+		margin-right: 29px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		background-color: var(--background);
+		border-radius: 8px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		padding-left: 19px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		margin-bottom: 20px;
+		box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
+	}
+
+	#todo-col {
+		display: flex;
+		margin-left: 29px;
 	}
 
 	/* DONE Column mobile */
@@ -275,11 +277,11 @@ h4 {
 		margin-top: 29px;
 		width: 112px;
 		height: 24px;
-        margin-left: 34px;
+		margin-left: 34px;
 	}
-    .all-bords{
-        margin-left: 34px;
-    }
+	.all-bords {
+		margin-left: 34px;
+	}
 	nav {
 		background-color: var(--background);
 		margin-right: 2px;
@@ -304,6 +306,7 @@ h4 {
 
 	main {
 		display: grid;
+		gap: 29px;
 		grid-template-columns: 280px 280px 280px;
 		background-color: #f4f7fd;
 		height: 1024px;
@@ -312,6 +315,92 @@ h4 {
 	}
 	.launch-col {
 		height: 97px;
+	}
+
+	/* Todo Column */
+
+	.todo-task1 {
+		width: 280px;
+
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		background-color: var(--background);
+		border-radius: 8px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		padding-left: 19px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		margin-bottom: 20px;
+		box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
+	}
+
+	.todo-task2 {
+		width: 280px;
+		margin-right: 29px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		background-color: var(--background);
+		border-radius: 8px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		padding-left: 19px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		margin-bottom: 20px;
+		box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
+	}
+
+	.todo-task3 {
+		width: 280px;
+		margin-right: 29px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		background-color: var(--background);
+		border-radius: 8px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		padding-left: 19px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		margin-bottom: 20px;
+		box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
+	}
+
+	.todo-task4 {
+		width: 280px;
+		margin-right: 29px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		background-color: var(--background);
+		border-radius: 8px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		padding-left: 19px;
+		font-size: 15px;
+		font-style: bold;
+		line-height: 100%;
+		font-weight: 700;
+		margin-bottom: 20px;
+		box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
+	}
+
+	#todo-col {
+		display: flex;
 	}
 
 	/* DONE Column desktop */
@@ -348,6 +437,7 @@ h4 {
 
 	/* DOING Column desktop */
 	.doing-task1 {
+		width: 280px;
 		background-color: var(--background);
 		border-radius: 8px;
 		padding-top: 20px;
@@ -358,10 +448,11 @@ h4 {
 		line-height: 100%;
 		font-weight: 700;
 		margin-bottom: 20px;
-		margin-right: 29px;
+
 		box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
 	}
 	.doing-task2 {
+		width: 280px;
 		background-color: var(--background);
 		border-radius: 8px;
 		padding-top: 20px;
@@ -372,7 +463,6 @@ h4 {
 		line-height: 100%;
 		font-weight: 700;
 		margin-bottom: 20px;
-		margin-right: 29px;
 		box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1015);
 	}
 	.doing-col {
